<resources>
    <string name="app_name">ImageShowApplication</string>
    <string name="action_settings">Settings</string>
    <string name="default_text">default</string>
    <string name="search">搜索</string>
    <string name="title">标题</string>
    <string name="rtn">返回</string>
    <string name="cancel">确定</string>
    <string name="go_board">跳转画板</string>
    <string name="collect">收藏图片</string>
    <string name="collect_board">收藏画板</string>
    <string name="collect_coser">收藏Coser</string>
    <string name="delete_collection">删除收藏</string>
    <string name="download">下载图片</string>
    <string name="footer_loading">正在加载中...</string>
    <string name="footer_end">没有更多数据！</string>
    <string name="footer_error">加载失败！</string>

    <string name="action_logout">注销</string>
    <string name="title_activity_login">登录</string>
    <string name="publish">发布</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="goods_discription">商品描述</string>
    <string name="seletct_a_pic">从相册选择一张照片</string>
    <string name="submit">提交</string>
    <string name="detail">详情</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码需要大于 6 位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="title_activity_register">注册</string>

    <string name="nav_collection">我的收藏</string>
    <string name="nav_setting">更改设置</string>
    <string name="nav_tools">酷站/小工具</string>
    <string name="nav_other">其它</string>
    <string name="nav_feedback">用户反馈</string>
    <string name="nav_logout">退出当前用户</string>

    <string name="base_version">ISA v1.0</string>
    <string name="welcome_bg">欢迎页面背景</string>
    <string name="welcome_skip">快速跳过 4 </string>
    <string name="welcome_skip1">快速跳过 3 </string>
    <string name="welcome_skip2">快速跳过 2 </string>
    <string name="welcome_skip3">快速跳过 1 </string>
    <string name="welcome_skip4">快速跳过 0 </string>

    <string name="default_name">浅浅ASAKI</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_go_register">注册新账号 >>> </string>

    <string name="settings_account_setting">账号设置</string>
    <string name="settings_app_setting">功能设置</string>
    <string name="settings_item_avatar">头像</string>
    <string name="settings_item_account">账号</string>
    <string name="settings_go_to">">"</string>
    <string name="settings_default_value">未设置</string>

    <string name="settings_cache_storage">缓存位置:</string>
    <string name="settings_download_storage">图片存储位置:</string>
    <string name="settings_btn_clear_cache">清除缓存</string>

    <string name="settings_day_night">夜间模式</string>
    <string name="settings_welcome_page">启动页开启</string>

    <string name="settings_version_check">检查更新</string>
    <string name="settings_version_show">当前版本v1.0</string>
    <string name="settings_about_app">关于</string>

    <string name="change_avatar_from_album">从相册选择</string>
    <string name="change_avatar_from_phone">相机拍照选择</string>
    <string name="change_avatar_title">更换头像</string>
    <string name="change_avatar_upload">上传头像文件</string>

</resources>
