<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/huaban_go_board"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/go_board"/>

    <item
        android:id="@+id/huaban_collect"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/collect"/>

    <item
        android:id="@+id/huaban_collect_board"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/collect_board"/>

    <item
        android:id="@+id/bcy_collect_coser"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/collect_coser"/>

    <item
        android:id="@+id/collection_delete"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/delete_collection"/>

</menu>