<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rect"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/change_avatar_image"
        android:contentDescription="@string/settings_item_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/settings_common_height"/>

    <TextView
        android:id="@+id/change_avatar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/settings_header_height"
        android:textColor="@color/colorBlack"
        android:text="@string/default_text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_view_height"
        android:layout_marginTop="@dimen/settings_header_height"
        android:background="@color/colorLightGray"
        android:layout_marginStart="@dimen/activity_start_margin"/>

    <LinearLayout
        android:id="@+id/change_avatar_from_album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_common_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:textSize="@dimen/settings_item_text_size"
            android:textColor="@color/colorLightBlack"
            android:text="@string/change_avatar_from_album"/>

        <ImageView
            android:contentDescription="@string/settings_go_to"
            android:layout_width="@dimen/settings_go_to_width"
            android:layout_height="@dimen/settings_go_to_size"
            android:background="@drawable/go_icon"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_view_height"
        android:background="@color/colorLightGray"
        android:layout_marginStart="@dimen/activity_start_margin"/>

    <LinearLayout
        android:id="@+id/change_avatar_from_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_common_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:textSize="@dimen/settings_item_text_size"
            android:textColor="@color/colorLightBlack"
            android:text="@string/change_avatar_from_phone"/>

        <ImageView
            android:contentDescription="@string/settings_go_to"
            android:layout_width="@dimen/settings_go_to_width"
            android:layout_height="@dimen/settings_go_to_size"
            android:background="@drawable/go_icon"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_view_height"
        android:background="@color/colorLightGray"
        android:layout_marginStart="@dimen/activity_start_margin"/>

    <Button
        android:id="@+id/change_avatar_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_start_margin"
        android:layout_marginTop="@dimen/settings_header_height"
        android:layout_marginEnd="@dimen/activity_start_margin"
        android:background="@color/button_color"
        android:text="@string/change_avatar_upload"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/change_avatar_loading"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        app:lottie_fileName="loading_moving_forward.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        />

</LinearLayout>
