<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">

    <ImageView
        android:id="@+id/welcome_image_view"
        android:contentDescription="@string/welcome_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/welcome_lottie_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:lottie_fileName="start_diamond.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />

    <TextView
        android:id="@+id/welcome_icon_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/base_version"
        android:gravity="center"
        android:textSize="12sp"
        android:drawableTop="@drawable/icon_round_64" />

    <Button
        android:id="@+id/welcome_skip_button"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_rect_alpha"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:text="@string/welcome_skip" />

</RelativeLayout>
